Initial attempt at Java 17 update.
Includes Spring 6.1 as well as many other updates.